# SupIRvisor

./: .gitignore  README.md  analysis.ipynb  author_info.py  data.py  main.py  mypy.ini  requirements.txt  setup.cfg  test.sh  tests.py
outputs/SIGIR2022/: authors.csv  authorships.csv  papers.csv
src/analyse_conf/: __init__.py  author_info.py  data.py  main.py  semantic_scholar.py  sigir_extract.py  test.ipynb
src/analyse_conf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: author_info_tests.py  conftest.py  integration_tests.py  sigir_extract_tests.py  test_data.py  test_semantic_scholar.py
