[metadata]
name = analyse_conf
description = computes statistics for papers and authors at a conference
author = Liam Watts
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    analyse_conf
install_requires = 
    attrs>=21
    requests>=2.31
    pandas>=1.3
    beautifulsoup4>=4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
